Cuarto ejercicio actualizado

--- a/notebooks/04datamanip.ipynb
+++ b/notebooks/04datamanip.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# 04 Manipuación de los Datos:\n",
+    "# 04 Manipulación de los Datos:\n",
     "\n",
     "En este ejercicio vamos a manipular una base de datos de recursos humanos"
    ],
@@ -184,7 +184,7 @@
     "### Paso 1: Unificación de Datos (Data Blending)\n",
     "Los datos están fragmentados (como en la mayoría de sistemas reales). Tu primer trabajo es consolidarlos.\n",
     "* Abre `HR_Empleados.csv`. Esta será tu tabla principal.\n",
-    "* Usa la función `BUSCARV` (VLOOKUP) en Excel o `merge` en Python para traer las siguientes columnas a tu tabla principal, usando el `ID_Empleado` como conector:\n",
+    "* Usa la función `merge` en Python para traer las siguientes columnas a tu tabla principal, usando el `ID_Empleado` como conector:\n",
     "    * Trae el `Puntaje_Desempeno` desde el archivo de Evaluaciones.\n",
     "    * **Reto:** Calcula el *promedio* de `Dias_Ausente` de los 3 meses (desde el archivo de Asistencia) y tráelo a la tabla principal. (Si usas Excel, quizás debas usar Tablas Dinámicas primero para resumir la asistencia por empleado)."
    ],
@@ -220,7 +220,7 @@
     "**C. Análisis Departamental (Carga de Trabajo)**\n",
     "1.  Agrupa los datos por `Departamento`.\n",
     "2.  Calcula el promedio de `Horas_Extra` por departamento.\n",
-    "* *Pregunta 3:* ¿Qué departamento está haciendo más horas extra? ¿Deberíamos contratar más personal allí?"
+    "* *Pregunta 3:* ¿Qué departamento está haciendo más horas extra?"
    ],
    "id": "f741bf606d09796a"
   },
